--- a/portofolioku.html
+++ b/portofolioku.html
@@ -5,18 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portofolio Saya</title>
-    <link rel="stylesheet" href="portofolioku.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
-        <h1>Azzuri Sulthan</h1>
+        <h1>Nama Anda</h1>
         <p>Web Developer</p>
     </header>
 
     <section id="about">
         <h2>Tentang Saya</h2>
         <p>Selamat datang di halaman portofolio saya. Saya adalah seorang web developer dengan pengalaman dalam...</p>
+    </section>
+
+    <section id="education">
+        <h2>Riwayat Pendidikan</h2>
+        <p>Gelar Sarjana, Nama Universitas, Tahun</p>
+        <p>Gelar Master, Nama Universitas, Tahun</p>
+        <!-- Tambahkan riwayat pendidikan lainnya jika diperlukan -->
+    </section>
+
+    <section id="experience">
+        <h2>Pengalaman Organisasi</h2>
+        <p>Jabatan, Nama Organisasi, Tahun</p>
+        <p>Jabatan, Nama Organisasi, Tahun</p>
+        <!-- Tambahkan pengalaman organisasi lainnya jika diperlukan -->
     </section>
 
     <section id="projects">
