--- a/portofolioku.html
+++ b/portofolioku.html
@@ -10,46 +10,44 @@
 
 <body>
     <header>
-        <h1>Nama Anda</h1>
+        <h1>Azzuri Sulthan</h1>
         <p>Web Developer</p>
     </header>
 
     <section id="about">
         <h2>Tentang Saya</h2>
-        <p>Selamat datang di halaman portofolio saya. Saya adalah seorang web developer dengan pengalaman dalam...</p>
+        <p>Selamat datang di halaman portofolio saya. Saya adalah pelajar yang bercita-cita menjadi seorang web developer.</p>
     </section>
 
     <section id="education">
         <h2>Riwayat Pendidikan</h2>
-        <p>Gelar Sarjana, Nama Universitas, Tahun</p>
-        <p>Gelar Master, Nama Universitas, Tahun</p>
+        <p>SDN 172 Andir Kidul Kota Bandung, 2019</p>
+        <p>SMPN 8 Bandung, 2022</p>
         <!-- Tambahkan riwayat pendidikan lainnya jika diperlukan -->
     </section>
 
     <section id="experience">
         <h2>Pengalaman Organisasi</h2>
-        <p>Jabatan, Nama Organisasi, Tahun</p>
-        <p>Jabatan, Nama Organisasi, Tahun</p>
+        <p>Ketua OSIS, 2021-2022</p>
+        <p>Anggota MPK, 2022-2023</p>
         <!-- Tambahkan pengalaman organisasi lainnya jika diperlukan -->
     </section>
 
     <section id="projects">
         <h2>Proyek Saya</h2>
         <div class="project">
-            <h3>Nama Proyek 1</h3>
-            <p>Deskripsi singkat proyek...</p>
-        </div>
-        <div class="project">
-            <h3>Nama Proyek 2</h3>
-            <p>Deskripsi singkat proyek...</p>
+            <h3>Proyek Website Kasir, 2022 (kelas 10)</h3>
+            <p>Website ini berisikan menambahkan menu dan harga menu secara dinamis (bisa di website nya langsung karena sudah terhubung dengan database,
+               website ini juga berisikan daftar data menu, dan yang terakhir ada fitur kasir yaitu menghitung total nominal harga dari menu yang dipilih.
+            </p>
         </div>
         <!-- Tambahkan proyek lain jika diperlukan -->
     </section>
 
     <section id="contact">
         <h2>Hubungi Saya</h2>
-        <p>Email: your@email.com</p>
-        <p>LinkedIn: linkedin.com/in/yourprofile</p>
+        <p>Email: azzuri.cerdas@gmail.com</p>
+        <p>Instagram: @azzuri313_</p>
     </section>
 </body>
 
