--- a/portofolioku.html
+++ b/portofolioku.html
@@ -16,28 +16,28 @@
 
     <section id="about">
         <h2>Tentang Saya</h2>
-        <p>Selamat datang di halaman portofolio saya. Saya adalah pelajar yang bercita-cita menjadi seorang web developer.</p>
+        <p>Hi! Saya saat ini adalah pelajar SMK jurusan RPL yang bercita-cita menjadi seorang web developer.</p>
     </section>
 
     <section id="education">
         <h2>Riwayat Pendidikan</h2>
-        <p>SDN 172 Andir Kidul Kota Bandung, 2019</p>
-        <p>SMPN 8 Bandung, 2022</p>
+        <p>SDN 172 Andir Kidul Kota Bandung, 2019.</p>
+        <p>SMPN 8 Bandung, 2022.</p>
         <!-- Tambahkan riwayat pendidikan lainnya jika diperlukan -->
     </section>
 
     <section id="experience">
         <h2>Pengalaman Organisasi</h2>
-        <p>Ketua OSIS, 2021-2022</p>
-        <p>Anggota MPK, 2022-2023</p>
+        <p>Ketua OSIS, 2021-2022.</p>
+        <p>Anggota MPK, 2022-2023.</p>
         <!-- Tambahkan pengalaman organisasi lainnya jika diperlukan -->
     </section>
 
     <section id="projects">
         <h2>Proyek Saya</h2>
         <div class="project">
-            <h3>Proyek Website Kasir, 2022 (kelas 10)</h3>
-            <p>Website ini berisikan menambahkan menu dan harga menu secara dinamis (bisa di website nya langsung karena sudah terhubung dengan database,
+            <h3>Proyek Website Kasir, 2022.</h3>
+            <p>Website ini merupakan website project akhir dan merupakan tugas akhir di kelas 10. Website ini berisikan menambahkan menu dan harga menu secara dinamis (bisa di website nya langsung karena sudah terhubung dengan database,
                website ini juga berisikan daftar data menu, dan yang terakhir ada fitur kasir yaitu menghitung total nominal harga dari menu yang dipilih.
             </p>
         </div>
