--- a/portofolioku.html
+++ b/portofolioku.html
@@ -1,54 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio Saya</title>
-    <link rel="stylesheet" href="portofolioku.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portofolio Saya</title>
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
+  <!-- External CSS -->
+  <link rel="stylesheet" href="portofolioku.css">
 </head>
-
 <body>
-    <header>
-        <h1>Azzuri Sulthan</h1>
-        <p>Web Developer</p>
-    </header>
+   <!-- Navigation Bar -->
+   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <a class="navbar-brand" href="#">Azzuri Sulthan</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Beranda <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Tentang Saya</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Proyek</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Kontak</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
-    <section id="about">
-        <h2>Tentang Saya</h2>
-        <p>Hi! Saya saat ini adalah pelajar SMK jurusan RPL yang bercita-cita menjadi seorang web developer.</p>
-    </section>
-
-    <section id="education">
-        <h2>Riwayat Pendidikan</h2>
-        <p>SDN 172 Andir Kidul Kota Bandung, 2019.</p>
-        <p>SMPN 8 Bandung, 2022.</p>
-        <!-- Tambahkan riwayat pendidikan lainnya jika diperlukan -->
-    </section>
-
-    <section id="experience">
-        <h2>Pengalaman Organisasi</h2>
-        <p>Ketua OSIS, 2021-2022.</p>
-        <p>Anggota MPK, 2022-2023.</p>
-        <!-- Tambahkan pengalaman organisasi lainnya jika diperlukan -->
-    </section>
-
-    <section id="projects">
-        <h2>Proyek Saya</h2>
-        <div class="project">
-            <h3>Proyek Website Kasir, 2022.</h3>
-            <p>Website ini merupakan website project akhir dan merupakan tugas akhir di kelas 10. Website ini berisikan menambahkan menu dan harga menu secara dinamis (bisa di website nya langsung karena sudah terhubung dengan database,
-               website ini juga berisikan daftar data menu, dan yang terakhir ada fitur kasir yaitu menghitung total nominal harga dari menu yang dipilih.
-            </p>
+<!-- Content -->
+<div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="card" id="about-me">
+          <div class="card-body">
+            <div class="card-header">
+              <h2>Tentang Saya</h2>
+            </div>
+            <div class="about-me-content">
+              <img src="PictOfMe.jpg" alt="My Photo" class="img-thumbnail">
+              <p style="text-align: justify; font-size: larger;">Selamat datang di halaman portofolio saya. Nama lengkap saya adalah Muhammad Azzuri Sulthan Aulia Wahab,
+                saya lahir di Bandung, 21 November 2006 yang berarti usia saya saat ini hampir menyentuh 17 tahun.
+                Saya saat ini adalah seorang pelajar Kelas 11 di SMK Negeri 13 Bandung jurusan Rekayasa Perangkat Lunak.
+                Cita-cita saya adalah menjadi Full-Stack Web Developer dan harapan saya semoga suatu hari nanti saya dapat menjadi
+                CEO sebuah perusahaan yang bergerak di dunia pengembangan perangkat lunak. Jika kalian ingin lebih tau tentang saya,
+                silakan untuk contact saya pada section 'contact me' di bawah dan akan saya jawab melalui email. Sekian, terima kasih! 
+              </p>
+            </div>
+          </div>
         </div>
-        <!-- Tambahkan proyek lain jika diperlukan -->
-    </section>
+      </div>
+    </div>
+  </div>
 
-    <section id="contact">
-        <h2>Hubungi Saya</h2>
-        <p>Email: azzuri.cerdas@gmail.com</p>
-        <p>Instagram: @azzuri313_</p>
-    </section>
+<!-- Section Projects -->
+<div id="projects" class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-header">
+                    <h2>My Projects</h2>
+                </div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="card">
+                                <img src="myprojects.jpg" class="card-img-top" alt="Project 1">
+                                <div class="card-body">
+                                    <h5 class="card-title">Project 1</h5>
+                                    <p class="card-text">Ini adalah salah satu project saya.</p>
+                                    <a href="#" class="btn btn-primary">Lihat Detail</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card">
+                                <img src="myprojects.jpg" class="card-img-top" alt="Project 2">
+                                <div class="card-body">
+                                    <h5 class="card-title">Project 2</h5>
+                                    <p class="card-text">Ini adalah salah satu project saya.</p>
+                                    <a href="#" class="btn btn-primary">Lihat Detail</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card">
+                                <img src="myprojects.jpg" class="card-img-top" alt="Project 3">
+                                <div class="card-body">
+                                    <h5 class="card-title">Project 3</h5>
+                                    <p class="card-text">Ini adalah salah satu project saya.</p>
+                                    <a href="#" class="btn btn-primary">Lihat Detail</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+  <!-- Section Contact Me -->
+  <div id="contact" class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="card">
+          <div class="card-header">
+            <h2>Contact Me</h2>
+          </div>
+          <div class="card-body">
+            <form>
+                <div class="form-group">
+                    <label for="name">Nama:</label>
+                    <input type="text" class="form-control" id="name" name="name" required>
+                  </div>
+                  <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" class="form-control" id="email" name="email" required>
+                  </div>
+                  <div class="form-group">
+                    <label for="message">Pesan:</label>
+                    <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Kirim Pesan</button>    
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap JS and Popper.js -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
 </body>
-
 </html>
